--- a/templates/layout/main.html
+++ b/templates/layout/main.html
@@ -7,7 +7,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ title }}</title>
-        <meta name="description" content="ITP DWD Example Site using templates">
+        <meta name="description" content="Test">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 
@@ -24,7 +24,7 @@
         <div class="container">
 
             <h1 class="pageheader">
-                <a href="/">ITP UPLOAD DEMO</a>
+                <a href="/">Raspberry Pi Uploads</a>
             </h1>
 
             <hr>
@@ -34,10 +34,7 @@
 
 
             <hr/>
-            <footer>
-                <p><a href="http://itppyweb.herokuapp.com">ITP DWD Fall 2012</a>
-               </p>
-            </footer>
+         
 
         </div> <!-- /container -->
 
