--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 {% block styles %}
 <style>
 img {
-	width:320px;
+	width:612px;
 }
 </style>
 
@@ -18,7 +18,7 @@ img {
 			<hr>
 			{% for img in images %}
 				<a title="{{img.title}}" alt="Title:{{img.title}}. Description: {{img.description}}" href="https://s3.amazonaws.com/dwd_uploads/myfolder/{{img.filename}}">
-				<img src="https://s3.amazonaws.com/dwd_uploads/{{img.filename}}" class="img-polaroid"></a>
+				<img src="https://s3.amazonaws.com/fakelove/{{img.filename}}" class="img-polaroid"></a>
 				<br>
 				<h3>{{img.title}}</h3>
 				<p>{{img.description}}
