--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@ img {
 				<a title="{{img.title}}" alt="Title:{{img.title}}. Description: {{img.description}}" href="https://s3.amazonaws.com/dwd_uploads/myfolder/{{img.filename}}">
 				<img src="https://s3.amazonaws.com/fakelove/{{img.filename}}" class="img-polaroid"></a>
 				<br>
-				<h3>{{img.title}}</h3>
+				<h3>{{img.filename}}</h3>
 				<p>{{img.description}}
 					<br>
 					{{ img.postedby }} - {{ img.timestamp.strftime("%m/%d/%y")}}
