--- a/templates/main.html
+++ b/templates/main.html
@@ -3,7 +3,7 @@
 {% block styles %}
 <style>
 img {
-	width:320px;
+	width:612px;
 }
 </style>
 
@@ -11,49 +11,16 @@ img {
 {% block body %}
 
 	<div class="row">
-		<div class="span5">
-		    {% if form.errors %}
-		    <ul class="errors">
-		        {% for field_name, field_errors in form.errors|dictsort if field_errors %}
-		            {% for error in field_errors %}
-		                <li class="alert alert-error">
-		                	{{ form[field_name].label.text }} - {{ error }}
-		               	</li>
-		            {% endfor %}
-		        {% endfor %}
-		    </ul>
-		    {% endif %}
-
-		    <h2>Upload an image</h2>
-		    <p>Behave.</p>
-			<form method="POST" enctype="multipart/form-data">
-				
-				{{ form.title.label }}
-				{{ form.title }}
-
-				{{ form.description.label }}
-				{{ form.description }}
-
-				{{ form.postedby.label }}
-				{{ form.postedby }}
-				<br>
-				{{ form.fileupload.label }}
-				{{ form.fileupload }}
-				<br><br>
-				<input class="btn btn-success" type="submit" value="upload">
-
-
-			</form>
-		</div>
+		
 
 		<div class="span7">
 			<h2>Images</h2>
 			<hr>
 			{% for img in images %}
 				<a title="{{img.title}}" alt="Title:{{img.title}}. Description: {{img.description}}" href="https://s3.amazonaws.com/dwd_uploads/myfolder/{{img.filename}}">
-				<img src="https://s3.amazonaws.com/dwd_uploads/{{img.filename}}" class="img-polaroid"></a>
+				<img src="https://s3.amazonaws.com/fakelove/{{img.filename}}" class="img-polaroid"></a>
 				<br>
-				<h3>{{img.title}}</h3>
+				<h3>{{img.filename}}</h3>
 				<p>{{img.description}}
 					<br>
 					{{ img.postedby }} - {{ img.timestamp.strftime("%m/%d/%y")}}
