--- a/templates/main.html
+++ b/templates/main.html
@@ -12,12 +12,23 @@ img {
 
 	<div class="row">
 		
-
+		<div class="span7">
+			<h2>Tweets</h2>
+			<hr>
+			{% for tweet in tweets %}
+				
+				<p>{{tweet.text}}
+					
+				</p>
+				<a href="/delete/{{tweet.id}}" class="btn btn-small btn-danger">delete</a>
+				<hr>
+			{% endfor %}
+		</div>
 		<div class="span7">
 			<h2>Images</h2>
 			<hr>
 			{% for img in images %}
-				<a title="{{img.title}}" alt="Title:{{img.title}}. Description: {{img.description}}" href="https://s3.amazonaws.com/dwd_uploads/myfolder/{{img.filename}}">
+				<a href="https://s3.amazonaws.com/dwd_uploads/myfolder/{{img.filename}}">
 				<img src="https://s3.amazonaws.com/fakelove/{{img.filename}}" class="img-polaroid"></a>
 				<br>
 				<h3>{{img.filename}}</h3>
