--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@ img {
 				<p>{{tweet.text}}
 					
 				</p>
-				<a href="/delete/{{tweet.id}}" class="btn btn-small btn-danger">delete</a>
+				<a href="/delete2/{{tweet.id}}" class="btn btn-small btn-danger">delete</a>
 				<hr>
 			{% endfor %}
 		</div>
