--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,10 @@ img {
 		<h2>Current Hash Tags</h2>
 		{% for q in prompts %}
 
-		<p><strong>Prompt:</strong> {{ q.prompt }} </p>
+		<p><strong>Typewriter Prompt:</strong> {{ q.prompt }} </p>
+		<p><strong>Guitar Prompt:</strong> {{ q.prompt2 }} </p>
+		<p><strong>Still Cam Prompt:</strong> {{ q.prompt3 }} </p>
+		<p><strong>Video Cam Prompt:</strong> {{ q.prompt4 }} </p>
 		<p><strong>Typewriter:</strong> {{ q.typewriter }} </p>
 		<p><strong>Guitar:</strong> {{ q.guitar }} </p>
 		<p><strong>Still:</strong> {{ q.still }} </p>
